# BarkodTakip

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.manifest.in  app.rc.in  mainwindow.cpp  product.cpp  product.h  setup.iss
include/: logger.h  logviewerdialog.h  mainwindow.h  product.h
resources/: resources.qrc  styles.qss
src/: logger.cpp  logger.h  logviewerdialog.cpp  mainwindow.cpp  product.cpp
